--- a/frontend/pages/Material/vistaCategoria.html
+++ b/frontend/pages/Material/vistaCategoria.html
@@ -16,6 +16,8 @@
     <script>
         loadCSS("header_footer.css");
         loadCSS("plantilla_css.css");
+        // Cargar favicon dinámicamente
+        loadFavicon("favicon.png");
     </script>
 
     <!-- JS dependientes -->
@@ -38,7 +40,7 @@
             <div id="sidebar-placeholder" class="sidebar-bg col-auto p-0"></div>
 
             <!-- CONTENIDO PRINCIPAL -->
-            <main class="col p-3 main-container">
+            <main class="col p-3 p-md-4 main-container">
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <h1 class="mb-0">Categorias</h1>
                     <!-- Icono de ayuda que redirige a Notion -->
