--- a/frontend/pages/Emergencia/vistaEmergenciaActiva.html
+++ b/frontend/pages/Emergencia/vistaEmergenciaActiva.html
@@ -37,7 +37,7 @@
     <div class="container-fluid">
         <div class="row">
             <!-- SIDEBAR -->
-            <div id="sidebar-placeholder" class="col-auto p-0"></div>
+            <div id="sidebar-placeholder" class="sidebar-bg col-auto p-0"></div>
 
             <!-- CONTENIDO PRINCIPAL -->
             <main class="col p-3 p-md-4 main-container">
