--- a/frontend/pages/Emergencia/vistaEmergencias.html
+++ b/frontend/pages/Emergencia/vistaEmergencias.html
@@ -87,7 +87,7 @@
                 <table class="table table-bordered table-striped" id="tabla">
                     <thead class="table-dark">
                         <tr> <!-- Cabecera de la tabla -->
-                            <th class="d-none d-md-table-cell">IDemergencia</th> <!-- Usar la clase "d-none d-md-table-cell" para las columnas que desaparezcan en TABLET-->
+                            <th class="d-none d-md-table-cell">ID Emergencia</th> <!-- Usar la clase "d-none d-md-table-cell" para las columnas que desaparezcan en TABLET-->
                             <th>Fecha</th>
                             <th class="d-none d-md-table-cell">Descripción</th>
                             <th>Estado</th>
@@ -137,11 +137,11 @@
                         </select>
                     </div>
                     <div class="col-mg-6 col-lg-4">
-                        <label for="operador" class="form-label">Nom Operador</label>
-                        <input type="text" class="form-control" id="operador" name="operador">
+                        <label for="operador" class="form-label">ID Bombero</label>
+                        <input type="text" class="form-control" id="id_bombero" name="id_bombero">
                     </div>
                     <div class="col-mg-6 col-lg-4">
-                        <label for="solicitante" class="form-label">Nom Solicitante</label>
+                        <label for="solicitante" class="form-label">Nombre Solicitante</label>
                         <input type="text" class="form-control" id="solicitante" name="solicitante">
                     </div>
                 </div>
