--- a/frontend/pages/AreaPersonal/vistaAreaPersonal.html
+++ b/frontend/pages/AreaPersonal/vistaAreaPersonal.html
@@ -71,7 +71,7 @@
     </style>
 </head>
 
-<body class="bg-white text-dark">
+<body class="bg-white text-dark d-flex flex-column">
     <!-- HEADER -->
     <div id="header-placeholder"></div>
 
@@ -410,7 +410,7 @@
     </div>
 
     <!-- FOOTER -->
-    <div id="footer-placeholder"></div>
+    <div id="footer-placeholder" class="mt-auto"></div>
 
     <!-- MODAL CERRAR SESIÓN -->
     <div class="modal fade" id="modalCerrarSesion" tabindex="-1">
