--- a/frontend/pages/Mapa/vistaMapa.html
+++ b/frontend/pages/Mapa/vistaMapa.html
@@ -21,12 +21,12 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
-    <link rel="stylesheet" href="mapa.css">
+    <link rel="stylesheet" href="../../assets/css/mapa.css">
        
    
 </head>
 
-<body class="bg-white text-dark">
+<body class="bg-white text-dark d-flex flex-column">
 
     <!-- HEADER -->
     <div id="header-placeholder"></div>
@@ -88,7 +88,7 @@
     
 
     <!-- FOOTER -->
-    <div id="footer-placeholder"></div>
+    <div id="footer-placeholder" class="mt-auto"></div>
 
 </body>
 
