--- a/frontend/pages/Almacen/vistaAlmacen.html
+++ b/frontend/pages/Almacen/vistaAlmacen.html
@@ -28,7 +28,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body class="bg-white text-dark">
+<body class="bg-white text-dark d-flex flex-column">
     <!-- HEADER -->
     <div id="header-placeholder"></div>
 
@@ -231,7 +231,7 @@
         </div>
     </div>
     <!-- FOOTER -->
-    <div id="footer-placeholder"></div>
+    <div id="footer-placeholder" class="mt-auto"></div>
 
 
 </body>
