--- a/frontend/pages/Cuadrante/vistaCuadranteMensual.html
+++ b/frontend/pages/Cuadrante/vistaCuadranteMensual.html
@@ -27,7 +27,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body class="bg-white text-dark">
+<body class="bg-white text-dark d-flex flex-column">
 
    <!-- HEADER -->
     <div id="header-placeholder"></div>
@@ -89,7 +89,7 @@
     </div>
 
     <!-- FOOTER -->
-    <div id="footer-placeholder"></div>
+    <div id="footer-placeholder" class="mt-auto"></div>
 
     <!-- JS CUADRANTE MENSUAL -->
     <script>
