--- a/frontend/pages/Mantenimiento/vistaMantenimiento.html
+++ b/frontend/pages/Mantenimiento/vistaMantenimiento.html
@@ -29,7 +29,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body class="bg-white text-dark">
+<body class="bg-white text-dark d-flex flex-column">
 
     <!-- HEADER -->
     <div id="header-placeholder"></div>
@@ -213,7 +213,7 @@
     </div>
 
     <!-- FOOTER -->
-    <div id="footer-placeholder"></div>
+    <div id="footer-placeholder" class="mt-auto"></div>
 
     <!-- SCRIPTS -->
     <script src="/frontend/javascript/mantenimiento.js"></script>
