--- a/frontend/pages/Permiso/vistaPermiso.html
+++ b/frontend/pages/Permiso/vistaPermiso.html
@@ -32,7 +32,7 @@
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@latest/index.global.min.js"></script>
 </head>
 
-<body class="bg-white text-dark">
+<body class="bg-white text-dark d-flex flex-column">
 
     <!-- HEADER -->
     <div id="header-placeholder"></div>
@@ -273,7 +273,7 @@
         </div>
     </div>
     <!-- FOOTER -->
-    <div id="footer-placeholder"></div>
+    <div id="footer-placeholder" class="mt-auto"></div>
 
 
 </body>
