--- a/frontend/pages/Mapa/vistaMapa.html
+++ b/frontend/pages/Mapa/vistaMapa.html
@@ -3,26 +3,35 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Tipos de emergencia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mapas</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
-    <!-- Paleta de colores / CSS proyecto -->
-    <link rel="stylesheet" href="../../assets/css/header_footer.css">
-    <link rel="stylesheet" href="../../assets/css/plantilla_css.css">
-
-    <!-- Configuración -->
+    <!-- Configuración y rutas absolutas -->
     <script src="/frontend/config/config.js"></script>
+
+    <!-- CSS del proyecto -->
+    <script>
+        loadCSS("header_footer.css");
+        loadCSS("plantilla_css.css");
+        loadCSS("mapa.css");
+        // Cargar favicon dinámicamente
+        loadFavicon("favicon.png");
+    </script>
+
+    <!-- JS dependientes -->
     <script src="/frontend/javascript/header_footer.js" defer></script>
+    <script src="/frontend/javascript/script_filtro_tabla.js" defer></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-
-    <link rel="stylesheet" href="../../assets/css/mapa.css">
-       
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>       
    
 </head>
 
